<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/visor"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:inputType="none"
        android:editable="false"
        android:padding="10dp"
        android:background="@android:color/darker_gray"
        />

    <!-- Primeira linha -->
    <LinearLayout
        android:id="@+id/FirstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/visor"
        android:layout_marginTop="30dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Seven"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Seven"
            android:text="@string/Seven"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Eight"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Eight"
            android:text="@string/Eight"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Nine"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Nine"
            android:text="@string/Nine"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Div"
            android:layout_marginTop="1dp"
            android:onClick="operatorAction"
            android:tag="Div"
            android:text="@string/Div"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Backspace"
            android:layout_marginTop="1dp"
            android:onClick="clearAction"
            android:tag="Backspace"
            android:text="@string/Backspace"
            />
    </LinearLayout>
    <!-- Segunda linha -->
    <LinearLayout
        android:id="@+id/SecondLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/FirstLine">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Four"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Four"
            android:text="@string/Four"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Five"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Five"
            android:text="@string/Five"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Six"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Six"
            android:text="@string/Six"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Mult"
            android:layout_marginTop="1dp"
            android:onClick="operatorAction"
            android:tag="Mult"
            android:text="@string/Mult"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Limpar"
            android:layout_marginTop="1dp"
            android:onClick="clearAction"
            android:tag="Clear"
            android:text="@string/Clear"
            />
    </LinearLayout>
    <!-- Terceira linha -->
    <LinearLayout
        android:id="@+id/ThirdLine"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/SecondLine">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/One"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="One"
            android:text="@string/One"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Two"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Two"
            android:text="@string/Two"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Three"
            android:layout_marginTop="1dp"
            android:onClick="numberAction"
            android:tag="Three"
            android:text="@string/Three"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Sub"
            android:layout_marginTop="1dp"
            android:onClick="operatorAction"
            android:tag="Sub"
            android:text="@string/Sub"
            />
    </LinearLayout>
    <!-- Quarta linha -->

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ThirdLine"
        android:id="@+id/Zero"
        android:layout_marginTop="1dp"
        android:onClick="numberAction"
        android:tag="Zero"
        android:text="@string/Zero"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ThirdLine"
        android:layout_alignTop="@+id/ThirdLine"
        android:layout_alignBottom="@id/LastLine"
        android:id="@+id/Result"
        android:layout_marginTop="1dp"
        android:onClick="Result"
        android:tag="Result"
        android:text="@string/Result"
        />

    <LinearLayout
        android:id="@+id/LastLine"
        android:layout_toLeftOf="@+id/Result"
        android:layout_alignStart="@+id/Three"
        android:layout_alignEnd="@+id/Sub"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ThirdLine"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/Dot"
            android:layout_marginTop="1dp"
            android:onClick="operatorAction"
            android:tag="Dot"
            android:text="@string/Dot"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/Soma"
            android:layout_marginTop="1dp"
            android:onClick="operatorAction"
            android:tag="Plus"
            android:text="@string/Plus"
            />

    </LinearLayout>


</RelativeLayout>
